--- a/config/database.yml
+++ b/config/database.yml
@@ -29,10 +29,11 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: bookaduc_api
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: ferrari
+
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
