Finish writing tests for models

--- a/config/database.yml
+++ b/config/database.yml
@@ -59,7 +59,11 @@ development:
 test:
   <<: *default
   database: bookaduc_api_test
+  # the same name as the operating system user that initialized the database.
+  username: postgres
 
+  # The password associated with the postgres role (username).
+  password: ferrari
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
