--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,16 +1,25 @@
 AllCops:
-  NewCops: enable
   Exclude:
+    - 'db/**/*'
+    - 'bin/*'
+    - 'config/**/*'
     - 'Guardfile'
     - 'Rakefile'
+    - 'node_modules/**/*'
 
   DisplayCopNames: true
 
 Layout/LineLength:
   Max: 120
 Metrics/MethodLength:
+  Include:
+    - 'app/controllers/*'
+    - 'app/models/*'
   Max: 20
 Metrics/AbcSize:
+  Include:
+    - 'app/controllers/*'
+    - 'app/models/*'
   Max: 50
 Metrics/ClassLength:
   Max: 150
